# rust_sandbox

./: .gitmodules  README.md
.github/workflows/: rust.yml  scala.yml
rust/: Cargo.toml  README.md
rust/src/: future_stream.rs  lib.rs
scala/: README.md  build.sbt  compiler.sbt  scapegoat.sbt
scala/project/: plugins.sbt
scala/src/main/scala/: FutureStream.scala
scala/src/test/scala/: FutureStreamSpec.scala  SpecWithStream.scala
