[package]
name = "rust_exercices"
version = "0.1.0"
authors = ["cchantep <cchantep@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = [ "time" ] }
